# CGuesser

./: Cargo.toml
src/: main.rs  wallet.rs
src/wallets/: bitcoin.rs  ethereum.rs  mod.rs
src/worker/: factory.rs  mod.rs
