[package]
name = "cguesser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
teloxide = { version = "0.12.2", features = ["macros"] }
serde = { version = "1.0.177", features = ["derive"] }
ethers = { version = "2.0.8", features = ["legacy"] }
bitcoin = "0.30.1"
rand = "0.8.5"
hex = "0.4.3"
